getting it to work, drawing from RP bookdown template

--- a/data_and_code.Rmd
+++ b/data_and_code.Rmd
@@ -15,4 +15,16 @@
 
 -->
 
+**[DATA, CODE](#data)**
+
+
+
+**Coding practice and tools**
+
+(Languages, clean code, reproducability, etc.)
+
+**Data practices**
+
+(Storing, labeling, etc)
+
 
