--- a/index.Rmd
+++ b/index.Rmd
@@ -1,16 +1,20 @@
 ---
 title: "Rethink Priorities on 'quantitative/social science methods'"
 author: "RP researchers, esp. the 'Survey team' (project 'owner' = Reinstein)"
-logo: logo.png
+logo: assets/logo.png
+bibliography: [references.bib, reinstein_bibtex.bib]
+csl: assets/apa.csl
 abstract: "A set of curated resources tied to use-cases, and a space to organize our discussion"
 date: "`r Sys.Date()`"
-bibliography: ["references.bib"]
-csl: apa.csl
 link-citations: yes
+always_allow_html: true
+use_littlefoot: true
+sidebar_width: "250px"
 site: bookdown::bookdown_site
 output:
   rethinkpriorities::book:
     toc_depth: 2
+    split_by: "chapter"
 github-repo: /rethinkpriorities/methodology-statistics-design
 description: "Rethink Priorities: Our approach to empirical and quantitative work"
 tags: [Econometrics, Statistics, Data Science, Experiments, Survey methods, Notes, Methodology]
@@ -42,4 +46,6 @@ knitr::knit_hooks$set(
 })
 ```
 
+# (Skip this top bit)
 
+It seems the index file needs a header?
