--- a/basic_stats.Rmd
+++ b/basic_stats.Rmd
@@ -124,7 +124,7 @@ This is a classic example for Bayesian inference. Some good discussions and vign
 
 *Ready packages* 
 
-- `bayesAB` is easy to apply, allows flexible specification of priors (and has tools to help you decide on these), and generates very clear output and graphs. See  [vignette](http://frankportman.github.io/bayesAB/)
+- `bayesAB` is easy to apply, allows flexible specification of priors (and has tools to help you visualize these), and generates very clear output and graphs. See  [vignette](http://frankportman.github.io/bayesAB/)
     - It (seems to) save the simulation data for you to summarize as you like
     - Limitations: Requires raw data for each treatment (not just summarized data), cannot address more than two groups, does not (?) share the 'raw code doing the work' for tweaking
     
