--- a/basic_stats.Rmd
+++ b/basic_stats.Rmd
@@ -92,7 +92,8 @@ E
 :::
 
 
-## 'Evidence of little or no effect' - equivalence tests, etc
+# Equivalence tests and Bayesian approaches 
+
 
 - [Unresolved discussion of 'Bayes factors' (Nik and Reinstein)](https://daaronr.github.io/metrics_discussion/hypothesis-testing-statistical-comparisons-and-inferences.html#b-factor)
 
@@ -135,7 +136,6 @@ This is a classic example for Bayesian inference. Some good discussions and vign
 
 
 
-
 ## A single framework? "Significance and equivalence testing" with randomization inference/simulation; building to Bayes {#simulation_to_bayes}
 
 
@@ -147,18 +147,26 @@ Note: there  may be good ways to hijack all sorts of existing tools, such as the
 
 ```
 
-We see a 'small difference' between treatment groups and it is 'not significant in standard tests' (tests not shown here yet). But can we put meaningful bounds on this? Can we statistically 'rule out large effects'?
+Suppose we see a 'small difference' between treatment groups and it is 'not significant in standard tests' (tests not shown here yet). 
+
+*How can we:*
+- Put meaningful bounds on this? 
+- Statistically 'rule out large effects'? 
+- Do this in the same context as our 'null hypothesis tests'?
+- Do and communicate this in a way that is acceptable to a range of audiences? 
 
 (This parallels the analysis done in  [HERE](https://rethinkpriorities.github.io/methodology-statistics-design/inference-and-rough-equivalence-testing-with-binomial-outcomes.html#how-likely-are-proportions-this-similar-under-different-size-true-effect-sizes), which includes dome further explanation of the methods)
 
 \
 
-We take the following approach:
+I (David) propose taking the following approach:
 
 1. Construct (by simulation or analytical formulae) the 'probability of "some function of our data" given a range of true parameters, i.e., given a range of relevant 'true rates of (relative) incidence' under each treatment (1/2, 3/4, equal, 4/3, 2, etc). This includes (and perhaps focuses on) the case where 'the true rates of incidence are equal to one another and equal to the average empirical incidence in our sample.'
 
-What "function of our data"?
 
+*What "function of our data"?*
+
+::: {.foldable}
 - The exact proportional difference in incidence rates that we see
 - A proportional difference in incidence rates as large as we see (in absolute value) or larger (I believe this is the 'two-tailed frequentist p-value')
 - A proportional difference in incidence rates as large as we see (in absolute value) or smaller (this gives us a sense of 'how unlikely is a large true effect ... can we probabilistically rule out a big difference')
@@ -166,6 +174,8 @@ What "function of our data"?
 - A proportional difference in incidence rates as large as we see in favor of the Control
 
 - ... Perhaps similar measures for other statistics such as  'difference in counts (not proportional), or 'average amount (donated)' (for the latter, we'd need to consider distinct true *distributions* of contributions)
+
+::: 
 
 2. Plot the above over the parameter range to get a visual picture of the maximum likelihood parameter, and (eyeballing) the relative probability of different ranges
 
@@ -177,8 +187,10 @@ What "function of our data"?
 
 4. Implicitly considering a 'flat prior', integrate (average) and compare important ranges of the above
 
-E.g.,
+E.g....
 
+
+::: {.foldable}
 - the probability mass of the parameter 'the incidence is 1.25x or higher in favor of the Treatment' , versus  1.25x or lower (closer to zero, or higher incidence under the Control)...
 - ... If the ratio is very small, then, given a fairly flat prior, our posterior should put a low probability on 'a large difference in favor of the treatment' ...
 - And similarly, reversing the control and treatment
@@ -186,15 +198,123 @@ E.g.,
 - And similarly, for both extremes relative to a middle incidence range...
 - ... here, if the ratio is very small, we will say "we can probablistically rule out an effect of 1.5x or larger in either direction"
 
-Question: Is it ever meaningful (or better) to compare regions that are not adjacent one another, and regions that do not add up to the entire space, e.g., compare [2, infinity] to  [-1,1] or something?
+::: 
+
+<!-- Question: Is it ever meaningful (or better) to compare regions that are not adjacent one another, and regions that do not add up to the entire space, e.g., compare [2, infinity] to  [-1,1] or something? -->
+
+
+Note:
+
+::: {.foldable}
+
+Jamie: 
+
+"To put simply, likelihood is "the likelihood of $\theta$ having generated D" and posterior is essentially "the likelihood of θ having generated D" further multiplied by the prior distribution of θ. If the prior distribution is flat (or non-informative), likelihood is exactly the same as posterior."
+
+So in essence, if you wanted, you could just put a prior distribution on the differences over which you have simulated differences, and multiply it with your likelihood. To get a proper posterior you would need a continuous distribution for the prior over the parameter space, and probably more simulations across the parameter space as well, to fill in the shape of the posterior. I guess the key difference between what you are suggesting and just running it as a Bayesian binomial regression is that your likelihood function is produced by simulation, whereas the one in the Bayesian regression would be generated through the model assumptions of the regression.
+
+::: 
 
 
 5. Optionally, repeat the above with a Bayesian tool, considering more than one 'explicit prior'.
 
 Ongoing question: Do we need or want a separate prior for 'incidence under treatment' and 'incidence under control', or can our prior simply focus on the relative incidence rates?
 
+::: {.alert .alert-secondary}
+
+Jamie suggests: Just do a Bayesian analysis and consider the posterior distribution. You can test the sensitivity to different priors. 
+
+::: 
+
+## 'Empirical Bayes' 
+
+Reference: David Robinson "Introduction to empirical bayes examples from baseball statistics" downloaded 28 Mar 2022 
+
+> Empirical Bayes estimation, where a beta distribution fit
+on all observations is then used to improve each individually. What’s
+great about this method is that as long as you have a lot of examples,
+you don’t need to bring in prior expectations.
 
 
+Some data cleaning 
+
+```{r setup-baseball-stats}
+
+p_load(Lahman)
+# Filter out pitchers
+career <- Batting %>%
+filter(AB > 0) %>%
+anti_join(Pitching, by = "playerID") %>%
+group_by(playerID) %>%
+summarize(H = sum(H), AB = sum(AB)) %>%
+mutate(average = H / AB)
+# Include names along with the player IDs
+career <- Master %>%
+tbl_df() %>%
+dplyr::select(playerID, nameFirst, nameLast) %>%
+unite(name, nameFirst, nameLast, sep = " ") %>%
+inner_join(career, by = "playerID") %>%
+dplyr::select(-playerID)
+
+
+career_filtered <- career %>%
+filter(AB > 100) #he uses 500, I think 100 is enough 
+
+
+```
+
+## Step 1: Estimate a [Beta] prior from all your data  
+
+We set up a likelihood function... probability of the data given different parameters.  It sums the log of 'how likely is each row (batter) given that batting averages are drawn particular true beta distribution, and hits are drawn from this'. At bats are taken as a constant, I guess
+
+```{r}
+library(stats4)
+p_load(VGAM)
+
+ll <- function(alpha, beta) {
+x <- career_filtered$H
+total <- career_filtered$AB
+
+-sum(VGAM::dbetabinom.ab(x, total, alpha, beta, log = TRUE)) #Note this is outputting the negative Log likelihood (not subtracting it from the last line)
+# 'how likely
+}
+
+```
+
+
+Next we search for the 'most likely parameters' ... the alpha and beta that maximize the above (using a particular algorithm).
+
+```{r}
+
+# maximum likelihood estimation
+m <- mle(ll, start = list(alpha = 1, beta = 10), method = "L-BFGS-B",
+lower = c(0.0001, .1))
+ab <- coef(m)
+alpha0 <- ab[1]
+beta0 <- ab[2]
+
+```
+
+## Step 2: Use that distribution as a prior for each individual estimate
+
+With the Beta prior and Binomial distribution, it turns out there is a simple rule for finding the midpoint (MAP?) of the posterior for the mean.  Adjust the 'average' formula by ... taking the numerator (hits) and add $\alpha_0$ from the Beta prior. Take the denominator (at-bats) and add $\alpha_0 + \beta_0$. 
+
+So if someone got 30 hits out of 100, our midpoint estimate for their true 'data generating' batting average is  $\frac{30+\alpha_0}{100+\alpha_0+\beta_0}$  
+
+We can do this across all the data, and find the 'best and worst' batters:
+
+```{r}
+career_eb <- career %>%
+mutate(eb_estimate = (H + alpha0) / (AB + alpha0 + beta0))
+
+
+career_eb %>% arrange(eb_estimate) %>% head(5) 
+
+career_eb %>% arrange(-eb_estimate) %>% head(5) 
+
+```
+
+As noted (and plotted) in the book, this method tends to 'shrink' the averages towards the overall midpoint. The lowest averages are raised a bit, and the highest averages are reduced a bit ... with more 'shrinkage' where there are fewer observations (at-bats).
 
 # Factor analysis, dimension reduction, and 'carving reality at its joints' {#factor-descriptive}
 
